payment processing block

--- a/src/fertilizers/PaymentForm.form
+++ b/src/fertilizers/PaymentForm.form
@@ -272,6 +272,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Process"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtprocessActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jbtcancel">
           <Properties>
