--- a/src/fertilizers/ShopMainForm.form
+++ b/src/fertilizers/ShopMainForm.form
@@ -301,6 +301,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Payments Entry"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtfpaymentsActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
